--- a/src/multipleunivariatetimeseries/arima.ipynb
+++ b/src/multipleunivariatetimeseries/arima.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x2b5b8b997f0>"
+       "<torch._C.Generator at 0x1dea4849810>"
       ]
      },
      "execution_count": 1,
@@ -1370,6 +1370,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "8384f722",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            DAIHATSU   HONDA  MITSUBISHI  SUZUKI   TOYOTA\n",
+      "2021-01-01    8993.0  7231.0      9108.0  6400.0  15474.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.head(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "e3430902",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def backtesting(p,d,q,seriesset):\n",
+    "    model = ARIMA(p, d, q)\n",
+    "\n",
+    "    backtest_forecast = model.backtest(\n",
+    "    series=seriesset,      \n",
+    "    start=0.8,               \n",
+    "    forecast_horizon=1,     \n",
+    "    metric=smape,            \n",
+    "    verbose=False\n",
+    "    )\n",
+    "    print(f\"Rata-rata sMAPE backtesting: {backtest_forecast:.2f}%\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "00b101a8",
    "metadata": {},
@@ -1379,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "52e0bc46",
    "metadata": {},
    "outputs": [],
@@ -1398,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "id": "caef819e",
    "metadata": {},
    "outputs": [
@@ -1434,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "7657d6ff",
    "metadata": {},
    "outputs": [
@@ -1488,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "id": "626db520",
    "metadata": {},
    "outputs": [
@@ -1534,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "id": "7aef0566",
    "metadata": {},
    "outputs": [],
@@ -1553,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "id": "5d439fb3",
    "metadata": {},
    "outputs": [
@@ -1623,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "id": "b11fe9a4",
    "metadata": {},
    "outputs": [
@@ -1651,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "id": "8bcf605b",
    "metadata": {},
    "outputs": [],
@@ -1670,7 +1709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "id": "0cad7b6c",
    "metadata": {},
    "outputs": [
@@ -1732,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "id": "8f54f6b4",
    "metadata": {},
    "outputs": [],
@@ -1751,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "id": "a319a9f7",
    "metadata": {},
    "outputs": [
@@ -1813,7 +1852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "id": "f5054250",
    "metadata": {},
    "outputs": [],
@@ -1832,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "id": "7cbbc176",
    "metadata": {},
    "outputs": [
@@ -1894,6 +1933,137 @@
     "\n",
     "forecast_august = arima_model_full.predict(1)\n",
     "print(\"Prediksi Agustus 2025 :\", forecast_august.values()[0][0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "fef0e9d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rata-rata sMAPE backtesting: 8.00%\n",
+      "Rata-rata sMAPE backtesting: 10.28%\n",
+      "Rata-rata sMAPE backtesting: 13.76%\n"
+     ]
+    }
+   ],
+   "source": [
+    "backtesting(2,1,2,ts_Daihatsu)\n",
+    "backtesting(3,1,0,ts_mitsubishi)\n",
+    "backtesting(2,1,1, ts_suzuki)\n",
+    "# backtesting(4,1,6,ts_toyota)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "24abc8ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\statsmodels\\tsa\\statespace\\sarimax.py:978: UserWarning: Non-invertible starting MA parameters found. Using zeros as starting parameters.\n",
+      "  warn('Non-invertible starting MA parameters found.'\n",
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n",
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n",
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\statsmodels\\tsa\\statespace\\sarimax.py:966: UserWarning: Non-stationary starting autoregressive parameters found. Using zeros as starting parameters.\n",
+      "  warn('Non-stationary starting autoregressive parameters'\n",
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n",
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n",
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n",
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n",
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n",
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n",
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rata-rata sMAPE backtesting: 41.97%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n"
+     ]
+    }
+   ],
+   "source": [
+    "backtesting(3,1,6, ts_Honda)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "0392ef0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n",
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n",
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n",
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n",
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n",
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n",
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n",
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n",
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n",
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n",
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rata-rata sMAPE backtesting: 18.75%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n"
+     ]
+    }
+   ],
+   "source": [
+    "backtesting(4,1,6, ts_toyota)"
    ]
   }
  ],
