Change predict agustus in toyota ARIMA 2010 - 2025

--- a/src/multipleunivariatetimeseries/arima_full_data.ipynb
+++ b/src/multipleunivariatetimeseries/arima_full_data.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "id": "55a9c13c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x163aa1157f0>"
+       "<torch._C.Generator at 0x1906a2297f0>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,10 +31,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "id": "c54ab0a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\fs\\__init__.py:4: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  __import__(\"pkg_resources\").declare_namespace(__name__)  # type: ignore\n",
+      "d:\\MiniConda\\envs\\torch_gpu\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -59,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "id": "88533fd9",
    "metadata": {},
    "outputs": [],
@@ -70,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "id": "763acf1b",
    "metadata": {},
    "outputs": [],
@@ -81,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "id": "cf5470c4",
    "metadata": {},
    "outputs": [
@@ -114,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "id": "cfe451ae",
    "metadata": {},
    "outputs": [
@@ -227,7 +238,7 @@
        "max    23165.000000  19339.000000  19341.000000  16903.000000  40781.000000"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "id": "e8cf46c8",
    "metadata": {},
    "outputs": [
@@ -276,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "id": "a9692c8f",
    "metadata": {},
    "outputs": [],
@@ -286,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "id": "16f4bbed",
    "metadata": {},
    "outputs": [
@@ -316,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "id": "1ce77525",
    "metadata": {},
    "outputs": [],
@@ -326,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "id": "82c92443",
    "metadata": {},
    "outputs": [
@@ -358,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "id": "92ceaece",
    "metadata": {},
    "outputs": [
@@ -373,7 +384,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "id": "37ff5909",
    "metadata": {},
    "outputs": [
@@ -408,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "id": "7a70f470",
    "metadata": {},
    "outputs": [],
@@ -418,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "id": "7989e47b",
    "metadata": {},
    "outputs": [
@@ -443,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
    "id": "c341b0c7",
    "metadata": {},
    "outputs": [],
@@ -453,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 17,
    "id": "35f65034",
    "metadata": {},
    "outputs": [
@@ -468,7 +479,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 18,
    "id": "b75ff91a",
    "metadata": {},
    "outputs": [],
@@ -489,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 19,
    "id": "4fb5c9c6",
    "metadata": {},
    "outputs": [
@@ -515,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 20,
    "id": "1e9161ba",
    "metadata": {},
    "outputs": [
@@ -544,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 21,
    "id": "06449629",
    "metadata": {},
    "outputs": [
@@ -563,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 22,
    "id": "5601de62",
    "metadata": {},
    "outputs": [],
@@ -574,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 23,
    "id": "ecadd9d2",
    "metadata": {},
    "outputs": [
@@ -613,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 24,
    "id": "23d2571f",
    "metadata": {},
    "outputs": [
@@ -693,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 25,
    "id": "06ea9823",
    "metadata": {},
    "outputs": [],
@@ -720,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 26,
    "id": "929cde32",
    "metadata": {},
    "outputs": [
@@ -819,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 27,
    "id": "b24da3b5",
    "metadata": {},
    "outputs": [
@@ -838,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 28,
    "id": "ff29948d",
    "metadata": {},
    "outputs": [],
@@ -848,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 29,
    "id": "922974ac",
    "metadata": {},
    "outputs": [],
@@ -858,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 30,
    "id": "2592c450",
    "metadata": {},
    "outputs": [],
@@ -868,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 31,
    "id": "80e3f7b2",
    "metadata": {},
    "outputs": [
@@ -889,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 32,
    "id": "bb2ad3d0",
    "metadata": {},
    "outputs": [],
@@ -899,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 33,
    "id": "2492bf70",
    "metadata": {},
    "outputs": [
@@ -919,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 34,
    "id": "ad0083a8",
    "metadata": {},
    "outputs": [
@@ -956,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 35,
    "id": "c6be22f5",
    "metadata": {},
    "outputs": [
@@ -1039,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 36,
    "id": "475c42b5",
    "metadata": {},
    "outputs": [
@@ -1066,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 37,
    "id": "142e1ab0",
    "metadata": {},
    "outputs": [
@@ -1284,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 38,
    "id": "b19b8ef8",
    "metadata": {},
    "outputs": [],
@@ -1294,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 39,
    "id": "f2d5cfa8",
    "metadata": {},
    "outputs": [],
@@ -1322,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 40,
    "id": "65106452",
    "metadata": {},
    "outputs": [],
@@ -1341,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 41,
    "id": "93acae16",
    "metadata": {},
    "outputs": [
@@ -1373,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 42,
    "id": "2b667aff",
    "metadata": {},
    "outputs": [
@@ -1435,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 43,
    "id": "9bf316a9",
    "metadata": {},
    "outputs": [],
@@ -1454,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 44,
    "id": "454dd6d4",
    "metadata": {},
    "outputs": [
@@ -1516,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 45,
    "id": "229c0867",
    "metadata": {},
    "outputs": [],
@@ -1535,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 46,
    "id": "660e7660",
    "metadata": {},
    "outputs": [
@@ -1597,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 47,
    "id": "4a44c2cf",
    "metadata": {},
    "outputs": [],
@@ -1616,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 48,
    "id": "3fc7c7ef",
    "metadata": {},
    "outputs": [
@@ -1680,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 49,
    "id": "bf513572",
    "metadata": {},
    "outputs": [
@@ -1708,7 +1719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 50,
    "id": "4865e244",
    "metadata": {},
    "outputs": [],
@@ -1727,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 57,
    "id": "12268de8",
    "metadata": {},
    "outputs": [
@@ -1736,19 +1747,19 @@
      "output_type": "stream",
      "text": [
       "   ---> PREDIKSI UNTUK MENGUKUR sMAPE <---\n",
-      "sMAPE untuk Juli 2025: 13.41%\n",
-      "Accurayy : 86.59%\n",
+      "sMAPE untuk Juli 2025: 29.94%\n",
+      "Accurayy : 70.06%\n",
       "Nilai aktual Juli 2025 : 7617.122\n",
-      "Forecast Juli 2025     : 8712.383\n",
+      "Forecast Juli 2025     : 10299.411312327957\n",
       "\n",
       " --------------------------------------------------\n",
       "\t---> PREDIKSI UTAMA TOYOTA <---\n",
-      "Prediksi Agustus 2025 : 4171.007\n"
+      "Prediksi Agustus 2025 : 9160.61313516906\n"
      ]
     }
    ],
    "source": [
-    "model_arima = ARIMA(0,1,0)\n",
+    "model_arima = ARIMA(1,1,1)\n",
     "model_arima.fit(train)\n",
     "\n",
     "forecast_july = model_arima.predict(1)\n",
@@ -1768,8 +1779,8 @@
     "print(f\"\\t---> PREDIKSI UTAMA {brands[4]} <---\")\n",
     "\n",
     "# ---> Re Train for count full data until july 2025\n",
-    "arima_model_full = ARIMA(0, 1, 0)\n",
-    "arima_model_full.fit(ts_Honda)\n",
+    "arima_model_full = ARIMA(1, 1, 1)\n",
+    "arima_model_full.fit(ts_toyota)\n",
     "\n",
     "forecast_august = arima_model_full.predict(1)\n",
     "print(\"Prediksi Agustus 2025 :\", forecast_august.values()[0][0])\n",
@@ -1781,7 +1792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 52,
    "id": "673e72c5",
    "metadata": {},
    "outputs": [
@@ -1809,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 53,
    "id": "e0248ed8",
    "metadata": {},
    "outputs": [
@@ -1843,7 +1854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 54,
    "id": "fd730e36",
    "metadata": {},
    "outputs": [
@@ -1857,6 +1868,25 @@
    ],
    "source": [
     "backtesting(0,1,0, ts_toyota)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "4a0049d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            DAIHATSU     HONDA  MITSUBISHI    SUZUKI    TOYOTA\n",
+      "2025-07-01  6354.101  4171.007      6121.0  2666.235  7617.122\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.tail(1))"
    ]
   }
  ],
